# cookiecutter-django

./: .pre-commit-config.yaml  01_SPEC.md  02_PLAN.md  02_TODO.md  CLAUDE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  docker-compose.yml  dumpdata.json  fabfile.py  pyproject.toml  release.sh  web.sh
{{ cookiecutter.project_slug }}/.github/workflows/: pre-commit.yml  tests.yml
{{ cookiecutter.project_slug }}/core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
{{ cookiecutter.project_slug }}/core/frontend/: package-lock.json  package.json  postcss.config.js  vite.config.mjs
{{ cookiecutter.project_slug }}/core/frontend/src/: styles.css
{{ cookiecutter.project_slug }}/core/frontend/src/js/: test.js
{{ cookiecutter.project_slug }}/core/frontend/src/js/widget/: Widget.css  Widget.jsx  main.jsx
{{ cookiecutter.project_slug }}/core/settings/: __init__.py  base.py  test.py
{{ cookiecutter.project_slug }}/core/templates/: _base.html  _header.html  about.html  about.jinja  base.html  base.jinja  home.html  home.jinja  page.html  page.jinja
{{ cookiecutter.project_slug }}/core/tests/: test_views.py  utils.py
{{ cookiecutter.project_slug }}/core/tests/live/: test_navigation.py  test_widget.py
