[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
requires-python = ">=3.11,<4.0"
dependencies = [
	"django >=5.1.2, <6.0.0",
	"django-jinja >=2.11.0",
	"whitenoise >=6.8.2",
	"django-environ >=0.11.2",
	"psycopg2 >=2.9.10",
]

[dependency-groups]
prod = [
	"gunicorn >=23.0.0, <24.0.0",
]

[tool.uv]
default-groups = []
