[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
requires-python = ">=3.11,<4.0"
dependencies = [
	"django >=5.1.2, <6.0.0",
	"django-jinja >=2.11.0",
	"whitenoise >=6.8.2",
	"django-environ >=0.11.2",
	"psycopg2 >=2.9.10",
]

[dependency-groups]
prod = [
	"gunicorn >=23.0.0, <24.0.0",
]
dev = [
	"ruff >=0.8.4",
	"pytest >=8.3.4",
	"pytest-django >=4.9.0",
	"pytest-cov >=6.0.0",
	"factory-boy >=3.3.1",
	"django-debug-toolbar >=4.4.6",
	"pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"
