[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
requires-python = ">=3.12,<4.0"
dependencies = [
	"django >=6.0.1, <7.0.0",
	"whitenoise >=6.11.0",
	"django-environ >=0.11.2",
	"psycopg2 >=2.9.10",
	"django-vite>=3.1.0",
]

[dependency-groups]
prod = [
	"gunicorn >=24.1.1, <25.0.0",
]
dev = [
	"ruff >=0.14.14",
	"pytest >=9.0.0",
	"pytest-django >=4.9.0",
	"pytest-cov >=6.0.0",
	"factory-boy >=3.3.1",
	"django-debug-toolbar >=5.0.1",
	"pre-commit>=4.2.0",
	"playwright>=1.57.0",
	"pytest-playwright>=0.7.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"
markers = [
     "browser: marks tests as browser tests using Playwright",
]
